Finished middle section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body> 
+<body>
 
 <div class="top ui borderless menu">
   <b class="fitted item">
@@ -48,9 +48,63 @@
   </div>
 </div>
 
+<img src="https://i.ibb.co/Xt5TMLN/coug.jpg" class="center">
 
+<div class="ui borderless text menu">
+  <div class="ui centered grid container">
 
+    <div class="ui dropdown item">
+      TEXTBOOKS
+      <i class="angle down icon"></i>
+      <div class="menu">
+        <div class="item">FIND TEXTBOOKS</div>
+        <div class="item">TEXTBOOK RENTALS</div>
+        <div class="item">SELL BACK TEXTBOOKS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      APPAREL
+      <i class="angle down icon"></i>
+      <div class="menu">
+        <div class="item">MEN</div>
+        <div class="item">WOMEN</div>
+        <div class="item">KIDS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      GIFTS
+      <i class="angle down icon"></i>
+      <div class="menu">
+        <div class="item">DIPLOMA FRAMES</div>
+        <div class="item">SCHOOL SPIRIT</div>
+        <div class="item">DRINKWARE</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      COLLECTIONS
+      <i class="angle down icon"></i>
+      <div class="menu">
+        <div class="item">UNDER ARMOR</div>
+        <div class="item">NIKE</div>
+        <div class="item">LOGO GEAR</div>
+      </div>
+    </div>
+
+    <div class="ui secondary item">
+      <a class="item">
+        SEARCH
+      </a>
+    </div>
+
+  </div>
 </div>
+
+<img class="centerimage" src="https://i.ibb.co/NrkdNpj/centerimage.jpg">
+
+
 
 <script>
   $('.ui.dropdown').dropdown();
