--- a/index.html
+++ b/index.html
@@ -104,7 +104,103 @@
 
 <img class="centerimage" src="https://i.ibb.co/NrkdNpj/centerimage.jpg">
 
+<div class="gray-background colorblocktop">
+  <div class="ui vertical container">
+    <div class="ui  grid">
+      <div class="six wide column">
 
+
+        <div class="ui vertical text menu">
+          <div class="header item">
+            <div style="color:#FFFFFF">NAVIGATION</div>
+            <hr>
+            <a class="active item">
+              <div style="color:#FFFFFF">About Us</div>
+            </a>
+
+            <a class="item">
+              <div style="color:#FFFFFF">Videos</div>
+            </a>
+
+            <a class="item">
+              <div style="color:#FFFFFF">Store Locations</div>
+            </a>
+          </div>
+        </div>
+
+      </div>
+      <div class="six wide column">
+
+        <div class="ui vertical text menu">
+          <div class="ui header item">
+            <div style="color:#FFFFFF">MAIN MENU</div>
+            <hr>
+            <a class="active item">
+              <div style="color:#FFFFFF">Text Books</div>
+            </a>
+
+            <a class="item">
+              <div style="color:#FFFFFF">Apparel</div>
+            </a>
+
+            <a class="item">
+              <div style="color:#FFFFFF">Gifts</div>
+            </a>
+          </div>
+        </div>
+
+      </div>
+      <div class="size wide column">
+        <div class="ui vertical text menu">
+          <div class="ui header item">
+            <div style="color:#FFFFFF">CONNECT</div>
+            <hr>
+            <div class="item" style="color:#FFFFFF">Sign up for the latest updates</div>
+
+            <div class="ui action input">
+              <input type="text" placeholder="Enter email address">
+              <button class="ui button">Join</button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <hr>
+
+    <div class="ui borderless text menu">
+      <div class="ui centered grid container">
+
+        <a class="item">
+          <i class="inverted large facebook f icon"></i>
+        </a>
+
+        <a class="item">
+          <i class="inverted large twitter icon"></i>
+        </a>
+        <a class="item">
+          <i class="inverted large pinterest icon"></i>
+        </a>
+        <a class="item">
+          <i class="inverted large instagram icon"></i>
+        </a>
+
+      </div>
+    </div>
+
+    <div class="item" style="color:#FFFFFF">
+      <center>
+        COPYWRITE
+        <i class="copyright outline icon"></i>
+        2019 WASHINGTON STATE UNIVERSITY VANCOUVER
+      </center>
+
+    </div>
+
+  </div>
+
+
+</div>
 
 <script>
   $('.ui.dropdown').dropdown();
